fix(ktableview): fix header z-index issue (#2849)
* fix(ktableview): fix header z-index issue

* fix: minor fix

* fix: address pr feedback

--- a/src/styles/mixins/_tables.scss
+++ b/src/styles/mixins/_tables.scss
@@ -79,7 +79,7 @@
           height: 44px;
           position: sticky;
           top: 0;
-          z-index: 3;
+          z-index: 2;
 
           &.is-scrolled {
             background-color: var(--kui-color-background, $kui-color-background);
